# beaker-akron

./: CMakeLists.txt  LICENSE
beaker/: CMakeLists.txt
beaker/all/: CMakeLists.txt  ast.cpp  ast.hpp  decl.cpp  decl.def  decl.hpp  expr.cpp  expr.def  expr.hpp  name.def  name.hpp  stmt.def  stmt.hpp  type.cpp  type.def  type.hpp
beaker/all/comparison/: equal.cpp  equal.hpp  hash.cpp  hash.hpp
beaker/all/evaluation/: evaluate.cpp  evaluate.hpp
beaker/all/printing/: print.cpp  print.hpp
beaker/base/: CMakeLists.txt  build.cpp  build.hpp  decl.cpp  decl.hpp  dispatch_table.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  lang.cpp  lang.def  lang.hpp  module.cpp  module.hpp  name.hpp  node.cpp  node.hpp  scope.cpp  scope.hpp  seq.cpp  seq.hpp  stmt.cpp  stmt.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  type.cpp  type.hpp  value.cpp  value.hpp
beaker/base/comparison/: eq.cpp  eq.hpp  equal.cpp  equal.hpp  hash.cpp  hash.hpp
beaker/base/construction/: builder.cpp  builder.hpp
beaker/base/evaluation/: evaluate.cpp  evaluate.hpp  (+2 more)
beaker/core/: CMakeLists.txt  README.md  decl.cpp  decl.def  decl.hpp  expr.cpp  expr.def  expr.hpp  lang.cpp  lang.hpp  name.def  name.hpp  stmt.def  stmt.hpp  type.def  type.hpp
beaker/data/: CMakeLists.txt  expr.cpp  expr.def  expr.hpp  lang.cpp  lang.hpp  type.def  type.hpp
beaker/functional/: CMakeLists.txt  name.def  stmt.def  type.cpp  type.def
beaker/lex/: CMakeLists.txt  number.cpp  number.hpp  word.cpp  word.hpp
beaker/logic/: CMakeLists.txt  decl.hpp  expr.cpp  expr.def  expr.hpp  lang.cpp  lang.hpp  type.cpp  type.hpp
beaker/numeric/: CMakeLists.txt  expr.cpp  expr.def  expr.hpp  lang.cpp  lang.hpp  type.cpp  type.def  type.hpp
beaker/procedural/: CMakeLists.txt  lang.cpp  lang.hpp  stmt.def  stmt.hpp
beaker/sample/: CMakeLists.txt  decl.def  decl.hpp  expr.cpp  expr.def  expr.hpp  name.cpp  name.hpp  stmt.hpp  type.hpp
beaker/sys.bool/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  decl.cpp  decl.def  decl.hpp  expr.cpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  type.cpp  type.def  type.hpp
beaker/sys.float/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  expr.cpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  type.def  type.hpp
beaker/sys.fn/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  decl.cpp  decl.def  decl.hpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  stmt.def  stmt.hpp  type.def  type.hpp
beaker/sys.int/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  expr.cpp  expr.def  expr.hpp  fwd.cpp  fwd.hpp  lang.cpp  lang.hpp  type.cpp  type.def  type.hpp
beaker/sys.mod/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  decl.def  decl.hpp  fwd.hpp  lang.cpp  lang.hpp
beaker/sys.name/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  fwd.hpp  lang.cpp  lang.hpp  name.cpp  name.def  name.hpp
beaker/sys.tuple/: ast.hpp  build.cpp  build.hpp  expr.cpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  type.def  type.hpp
beaker/sys.var/: CMakeLists.txt  README.md  ast.hpp  build.cpp  build.hpp  decl.def  decl.hpp  expr.cpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  type.def  type.hpp
beaker/sys.void/: CMakeLists.txt  ast.hpp  build.cpp  build.hpp  expr.cpp  expr.def  expr.hpp  fwd.hpp  lang.cpp  lang.hpp  type.def  type.hpp
beaker/terms/: CMakeLists.txt  README.md  data.hpp  functional.hpp  logic.hpp  numeric.hpp
beaker/util/: CMakeLists.txt  canonical_set.cpp  canonical_set.hpp  cast.cpp  cast.hpp  class_graph.cpp  class_graph.hpp  dispatch_table.cpp  dispatch_table.hpp  hash.cpp  hash.hpp  location.cpp  location.hpp  memory.cpp  memory.hpp  singleton_set.cpp  singleton_set.hpp  stream.hpp  string.cpp  string.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp
beaker/variadic/: CMakeLists.txt  README.md  expr.def  expr.hpp  lang.cpp  lang.hpp  type.def  type.hpp
tests/: CMakeLists.txt  json.cpp
tests/ast/: CMakeLists.txt  assert-1.cpp  assert-2.cpp  assign-1.cpp  bool-1.cpp  bool-2.cpp  build.cpp  build.hpp  expr.hpp  fn-1.cpp  fn-2.cpp  fn-3.cpp  int-1.cpp  int-2.cpp  lang.cpp  lang.hpp  logic-1.cpp  logic-2.cpp  module-1.cpp  numeric-1.cpp  order-1.cpp  stmt.cpp  stmt.hpp  test.cpp  test.hpp  tuple-1.cpp  util.cpp  util.hpp  var-1.cpp  var-2.cpp  var-3.cpp  void-1.cpp  void-2.cpp
tests/input/: 1.json
tests/lex/: CMakeLists.txt  c_word.cpp  number.cpp  word.cpp
(+295 files in other folders)
